--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,12 +26,12 @@
     -->
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&family=Jua&family=Sunflower:wght@300&display=swap');
-      </style>
+    </style>
     <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style="background-color:#EEF2FF;"></div>
+    <div id="root" style="background-color: #eef2ff"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
